# Peepal

./: README.md  config.py  main.py  models.py  pyproject.toml  requirements.txt  test.py
static/css/: styles.css
static/js/: main.js  pdf_viewer.js
templates/: base.html  index.html
